fix spacing issue on mobile

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -5,3 +5,34 @@
 .anon .hero, .anon .hero-container {
   display: flex;
 }
+
+// Categories
+.category-list {
+  border-collapse: separate;
+  border-spacing: 0 20px;
+  thead {
+    th {
+      padding-bottom: 0;
+    }
+  }
+  tbody {
+    tr {
+      border-bottom: 0px solid transparent;
+      box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
+      td.category {
+        background: $highlight;
+        border-radius: 6px 0 0 6px;
+      }
+      td.topics {
+        background: $highlight;
+        border-radius: 0 6px 6px 0;
+      }
+      td:first-of-type {
+        padding-left: 30px;
+      }
+      td {
+        padding: 30px;
+      }
+    }
+  }
+}
